--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
+    android:clickable="true"
+    android:focusable="true"
     app:cardCornerRadius="4dp"
     app:cardElevation="8dp">
 
@@ -22,33 +24,44 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:ellipsize="end"
+            android:fontFamily="@font/merriweather_regular"
+            android:justificationMode="inter_word"
             android:maxLines="2"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/isFav"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="UnusedAttribute"
             tools:text="@tools:sample/full_names" />
 
         <TextView
             android:id="@+id/authorNews"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/merriweather_regular"
+            android:paddingStart="8dp"
             android:textSize="12sp"
             app:layout_constraintEnd_toStartOf="@+id/time_stamp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/titleNews"
+            tools:ignore="RtlSymmetry"
             tools:text="@tools:sample/full_names" />
 
         <TextView
             android:id="@+id/time_stamp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/merriweather_regular"
+            android:paddingEnd="8dp"
             android:textSize="12sp"
             app:layout_constraintEnd_toStartOf="@+id/isFav"
             app:layout_constraintStart_toEndOf="@id/authorNews"
             app:layout_constraintTop_toBottomOf="@id/titleNews"
+            tools:ignore="RtlSymmetry"
             tools:text="@tools:sample/full_names" />
 
         <androidx.appcompat.widget.AppCompatCheckBox
@@ -59,7 +72,8 @@
             android:button="@drawable/favourite_drawable"
             android:minWidth="0dp"
             android:minHeight="0dp"
-            android:padding="8dp"
+            android:padding="6dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/titleNews"
             app:layout_constraintTop_toTopOf="parent" />
@@ -67,7 +81,7 @@
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imageNews"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="170dp"
             android:layout_marginTop="8dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
@@ -83,12 +97,32 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:ellipsize="end"
+            android:fontFamily="@font/merriweather_regular"
+            android:justificationMode="inter_word"
             android:maxLines="5"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:textColor="@color/black"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/imageNews"
+            tools:ignore="UnusedAttribute"
             tools:text="@tools:sample/lorem/random" />
+
+        <TextView
+            android:id="@+id/hashtag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="6dp"
+            android:maxLines="1"
+            android:text="@string/latest_news"
+            android:textSize="17sp"
+            android:textStyle="italic"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/descriptionNews" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
