--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,23 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawer"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.screen.MainFragment">
+
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/host"
+        android:layout_gravity="start"
+        app:menu="@menu/drawer_menu"
+        app:itemTextAppearance="@style/customTextItem"
+        app:headerLayout="@layout/nav_header"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <!--<include android:id="@+id/news_list_container"
+            layout="@layout/newslist_layout"/>-->
+
+    </com.google.android.material.navigation.NavigationView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!--        <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?actionBarSize"
+                    android:background="@color/teal_700"
+                    app:layout_constraintBottom_toTopOf="@+id/swipeRefresh"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:title="@string/app_name"
+                    app:titleTextColor="@color/white" />-->
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/toolbar"
+            android:id="@+id/linearLayoutCompat"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
-            android:background="@color/teal_700"
+            android:background="#F7C88A8A"
             android:orientation="horizontal"
-            android:padding="8dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -34,43 +62,135 @@
                 android:src="@drawable/ic_list" />
 
             <TextView
-                android:id="@+id/toolbarText"
+                android:id="@+id/toolbar"
                 android:layout_width="wrap_content"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:textAlignment="center"
+                android:layout_weight="1"
+                android:fontFamily="@font/merriweather_regular"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:paddingHorizontal="16dp"
+                android:text="Latest News"
+                android:textStyle="bold"
                 android:textColor="@color/white"
-                android:textSize="20sp"
-                tools:text="@tools:sample/full_names" />
+                android:textSize="20sp" />
 
             <ImageButton
-                android:background="@null"
                 android:id="@+id/click_favourite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:background="@null"
                 android:minWidth="0dp"
                 android:minHeight="0dp"
-                android:layout_margin="6dp"
+                android:padding="6dp"
+                android:visibility="gone"
+                android:src="@drawable/ic_heart"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/titleNews"
-                app:layout_constraintTop_toTopOf="parent"
-                android:src="@drawable/ic_heart2"
-                tools:ignore="ContentDescription" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <LinearLayout
+            android:id="@+id/snap_category"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="#EDE1E1"
+            android:gravity="center_vertical"
+            app:layout_constraintTop_toBottomOf="@id/linearLayoutCompat"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center_vertical"
+                android:orientation="vertical"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Categories"
+                        android:fontFamily="@font/merriweather_regular"
+                        android:textSize="24dp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textStyle="bold" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="1" />
+
+                    <LinearLayout
+                        android:id="@+id/layoutDots"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="horizontal" />
+
+                </LinearLayout>
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Based on User Rating"
+                    android:visibility="gone"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/grey_40" />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/grey_3" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:visibility="visible">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerViewRated"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clipToPadding="false"
+                    android:paddingLeft="7dp"
+                    android:paddingRight="7dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:scrollbars="none"
+                    />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
 
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipeRefresh"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/snap_category"
+            app:layout_constraintVertical_bias="0.0">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/listNews"
@@ -78,23 +198,11 @@
                 android:layout_height="match_parent"
                 tools:listitem="@layout/item_news" />
 
+
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/host"
-        android:layout_gravity="start"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <include android:id="@+id/news_list_container"
-            layout="@layout/newslist_layout"/>
-
-    </com.google.android.material.navigation.NavigationView>
-
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
