--- a/app/src/main/res/layout/fragment_news_catgory.xml
+++ b/app/src/main/res/layout/fragment_news_catgory.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.screen.ReadMoreFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.screen.NewsByCategory">
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/toolbar"
+        android:id="@+id/linearLayoutCompat"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:background="@color/teal_700"
+        android:background="#F7C88A8A"
         android:orientation="horizontal"
-        android:paddingEnd="8dp"
         android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -30,44 +30,41 @@
             android:src="@drawable/ic_back" />
 
         <TextView
-            android:id="@+id/toolbarText"
+            android:id="@+id/toolbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:ellipsize="end"
             android:layout_weight="1"
+            android:fontFamily="@font/merriweather_regular"
+            android:ellipsize="end"
+            android:textStyle="bold"
+            android:textAlignment="center"
             android:maxLines="1"
             android:paddingHorizontal="16dp"
+            android:text="NewsApp"
             android:textColor="@color/white"
-            android:textSize="20sp"
-            tools:text="@tools:sample/full_names" />
-
-        <androidx.appcompat.widget.AppCompatCheckBox
-            android:id="@+id/isFav_fragment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            android:background="@null"
-            android:padding="8dp"
-            android:visibility="gone"
-            android:layout_gravity="center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/titleNews"
-            app:layout_constraintTop_toTopOf="parent"
-            android:backgroundTint="@color/white"
-            android:button="@drawable/favourite_drawable" />
-
+            android:textSize="20sp" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <WebView
-        android:id="@+id/webView"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefresh"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?actionBarSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/snap_category"
+        app:layout_constraintVertical_bias="0.0">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/listNews"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/item_news" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
+</FrameLayout>
