--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -117,6 +117,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginBottom="6dp"
             android:maxLines="1"
+            android:fontFamily="@font/merriweather_regular"
             android:text="@string/latest_news"
             android:textSize="17sp"
             android:textStyle="italic"
