--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -10,121 +10,128 @@
     app:cardCornerRadius="4dp"
     app:cardElevation="8dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/clickItem"
+    <com.balysv.materialripple.MaterialRippleLayout
+        style="@style/RippleStyleBlack"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?selectableItemBackground"
-        android:clickable="true"
-        android:focusable="true"
-        android:padding="8dp">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/titleNews"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:fontFamily="@font/merriweather_regular"
-            android:justificationMode="inter_word"
-            android:maxLines="2"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/isFav"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="UnusedAttribute"
-            tools:text="@tools:sample/full_names" />
-
-        <TextView
-            android:id="@+id/authorNews"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/merriweather_regular"
-            android:paddingStart="8dp"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toStartOf="@+id/time_stamp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/titleNews"
-            tools:ignore="RtlSymmetry"
-            tools:text="@tools:sample/full_names" />
-
-        <TextView
-            android:id="@+id/time_stamp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/merriweather_regular"
-            android:paddingEnd="8dp"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toStartOf="@+id/isFav"
-            app:layout_constraintStart_toEndOf="@id/authorNews"
-            app:layout_constraintTop_toBottomOf="@id/titleNews"
-            tools:ignore="RtlSymmetry"
-            tools:text="@tools:sample/full_names" />
-
-        <androidx.appcompat.widget.AppCompatCheckBox
-            android:id="@+id/isFav"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="6dp"
-            android:button="@drawable/favourite_drawable"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            android:padding="6dp"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/titleNews"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imageNews"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clickItem"
             android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:layout_marginTop="8dp"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/news"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/authorNews"
-            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />
+            android:layout_height="match_parent"
+            android:background="?selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            android:padding="8dp">
 
-        <TextView
-            android:id="@+id/descriptionNews"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:ellipsize="end"
-            android:fontFamily="@font/merriweather_regular"
-            android:justificationMode="inter_word"
-            android:maxLines="5"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imageNews"
-            tools:ignore="UnusedAttribute"
-            tools:text="@tools:sample/lorem/random" />
+            <TextView
+                android:id="@+id/titleNews"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:fontFamily="@font/merriweather_regular"
+                android:justificationMode="inter_word"
+                android:maxLines="2"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/isFav"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="UnusedAttribute"
+                tools:text="@tools:sample/full_names" />
 
-        <TextView
-            android:id="@+id/hashtag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="6dp"
-            android:maxLines="1"
-            android:fontFamily="@font/merriweather_regular"
-            android:text="@string/latest_news"
-            android:textSize="13sp"
-            android:textStyle="italic"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/descriptionNews" />
+            <TextView
+                android:id="@+id/authorNews"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/merriweather_regular"
+                android:paddingStart="8dp"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toStartOf="@+id/time_stamp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/titleNews"
+                tools:ignore="RtlSymmetry"
+                tools:text="@tools:sample/full_names" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/time_stamp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/merriweather_regular"
+                android:paddingEnd="8dp"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toStartOf="@+id/isFav"
+                app:layout_constraintStart_toEndOf="@id/authorNews"
+                app:layout_constraintTop_toBottomOf="@id/titleNews"
+                tools:ignore="RtlSymmetry"
+                tools:text="@tools:sample/full_names" />
+
+            <androidx.appcompat.widget.AppCompatCheckBox
+                android:id="@+id/isFav"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                android:button="@drawable/favourite_drawable"
+                android:minWidth="0dp"
+                android:minHeight="0dp"
+                android:padding="6dp"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/titleNews"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/imageNews"
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:layout_marginTop="8dp"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/news"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/authorNews"
+                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />
+
+            <TextView
+                android:id="@+id/descriptionNews"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/merriweather_regular"
+                android:justificationMode="inter_word"
+                android:maxLines="5"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/imageNews"
+                tools:ignore="UnusedAttribute"
+                tools:text="@tools:sample/lorem/random" />
+
+            <TextView
+                android:id="@+id/hashtag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="6dp"
+                android:fontFamily="@font/merriweather_regular"
+                android:maxLines="1"
+                android:text="@string/latest_news"
+                android:textSize="13sp"
+                android:textStyle="italic"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/descriptionNews" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.balysv.materialripple.MaterialRippleLayout>
 
 </androidx.cardview.widget.CardView>
