--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -19,6 +19,10 @@
         android:id="@+id/contact"
         android:icon="@drawable/contact_icon"
         android:title="Contact us" />
+    <item
+        android:id="@+id/about_us"
+        android:icon="@drawable/ic_info"
+        android:title="About us"/>
 
 
 
